Update tab bar style, fix padding on iPhone/iPad

--- a/css/dark.css
+++ b/css/dark.css
@@ -34,3 +34,7 @@ a:hover {
 .form-text {
     color: #d3d3d3;
 }
+
+.border-top {
+    border-color: #000 !important;
+}
